test/conformance/kuttl/generate/clusterpolicy/standard/clone/nosync/cpol-clone-nosync-create/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-nosync-clone
status:
  ready: true
